--- a/style.css
+++ b/style.css
@@ -34,10 +34,17 @@ text-align: left; }
 .mainHome span {
     font-weight: bold;
 }
+.mainHome div {
+    border: 1px solid teal;
+    border-radius: 5px;
+    padding: 10px;
+    width: 50px;
+}
 .mainHome a {
     color: teal;
     text-decoration: none;
     font-weight: bold;
+    font-size: 16px !important;
 }
 h1 { margin-bottom: 32px; font-size: 3em; }
 .tableViewCell { width: 100%; height: 45px; position: relative; }
